# Computergrafik

./: placeholderCube.blend  test.mtl
asteroids/: CTestTestfile.cmake  Makefile  cmake_install.cmake  game_test  geometry_test  main_game  math.tcc  math_test  math_test.cc  physics_test  sdl2_renderer.cc
asteroids3D/: geometry.h  math_test  opengl_renderer.h
asteroids_3d/: CMakeCache.txt  CTestTestfile.cmake  Makefile  asteroid.mtl  cmake_install.cmake  game_test  geometry_test  main_game  math_test  matrix_test  physics_test  spaceship.mtl
asteroids_opengl/: math.tcc  matrix.tcc  matrix_test.cc  opengl_renderer.cc
geometry/: CMakeLists.txt  geometry.tcc  math.h
math/: CMakeCache.txt  Makefile  cmake_install.cmake  math.tcc
matrix/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  math.h  matrix.tcc  matrix_test
raytracer/: -12.ppm  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  color.h  image.ppm  math.tcc  raytracer  raytracer.cc
raytracer/.cmake/api/v1/reply/: cache-v2-6d2b3d78d4f41db5aea6.json  cmakeFiles-v1-626faf765c51c4fcba01.json  codemodel-v2-5f2701235d3af1cf5586.json  index-2024-06-12T13-58-19-0552.json  target-raytracer-Debug-a9e1fb5750fefe5ba5ce.json
viewer/: CMakeCache.txt  Makefile  cmake_install.cmake  saucer.mtl  test.blend  torpedo.mtl  viewer  viewer.cc  wavefront.cc  wavefront_test
